--- a/Core.DALC/QOfreces.WPF/GenOferta.xaml
+++ b/Core.DALC/QOfreces.WPF/GenOferta.xaml
@@ -30,37 +30,55 @@
             </DataGrid.Columns>
         </DataGrid>
         <Button x:Name="btnListar" Content="Listar Productos" HorizontalAlignment="Left" Margin="227,119,0,0" VerticalAlignment="Top" Width="128" Click="btnListar_Click" Grid.Column="1" BorderBrush="Black" Height="26"/>
-        <Label Content="Nombre Oferta" HorizontalAlignment="Left" Margin="29,272,0,0" VerticalAlignment="Top" Width="137" Height="26"/>
-        <Label Content="Precio Oferta" HorizontalAlignment="Left" Margin="29,303,0,0" VerticalAlignment="Top" Height="26" Width="79"/>
-        <Label Content="Fecha Oferta" HorizontalAlignment="Left" Margin="29,369,0,0" VerticalAlignment="Top" Height="26" Width="77"/>
-        <Label Content="Descripcion Oferta" HorizontalAlignment="Left" Margin="29,532,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.528,2.423" Height="26" Width="108"/>
-        <TextBox x:Name="txtNombre" Controls:TextBoxHelper.ClearTextButton="True" Controls:TextBoxHelper.Watermark="Ingresa el nombre" HorizontalAlignment="Left" Height="26" Margin="149,272,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="143" BorderBrush="Black"/>
-        <TextBox x:Name="txtPrecio" Controls:TextBoxHelper.ClearTextButton="True" Controls:TextBoxHelper.Watermark="Ingresa precio" HorizontalAlignment="Left" Height="26" Margin="149,303,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="143" BorderBrush="Black"/>
-        <TextBox x:Name="txtDescOf" Controls:TextBoxHelper.ClearTextButton="True" HorizontalAlignment="Left" Height="101" Margin="149,532,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="143" BorderBrush="Black"/>
-        <DatePicker x:Name="dpFecha" HorizontalAlignment="Left" Margin="149,369,0,0" VerticalAlignment="Top" BorderBrush="Black" Height="26" Width="143"/>
-        <Label Content="Minimo Productos" HorizontalAlignment="Left" Margin="351,272,0,0" VerticalAlignment="Top" Width="113" Height="26"/>
-        <TextBox x:Name="txtMinProd" Controls:TextBoxHelper.ClearTextButton="True" Controls:TextBoxHelper.Watermark="Cantidad minima" HorizontalAlignment="Left" Height="26" Margin="30,271,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="141" BorderBrush="Black" Grid.Column="1"/>
+        <Label Content="Nombre Oferta" HorizontalAlignment="Left" Margin="29,259,0,0" VerticalAlignment="Top" Width="137" Height="26"/>
+        <Label Content="Precio Oferta" HorizontalAlignment="Left" Margin="29,316,0,0" VerticalAlignment="Top" Height="26" Width="79"/>
+        <Label Content="Fecha Oferta" HorizontalAlignment="Left" Margin="29,430,0,0" VerticalAlignment="Top" Height="26" Width="77"/>
+        <Label Content="Descripcion Oferta" HorizontalAlignment="Left" Margin="29,559,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.528,2.423" Height="26" Width="108"/>
+        <TextBox x:Name="txtNombre" Controls:TextBoxHelper.ClearTextButton="True" Controls:TextBoxHelper.Watermark="Ingresa el nombre" HorizontalAlignment="Left" Height="26" Margin="149,259,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="143" BorderBrush="Black"/>
+        <TextBox x:Name="txtPrecio" Controls:TextBoxHelper.ClearTextButton="True" Controls:TextBoxHelper.Watermark="Ingresa precio" HorizontalAlignment="Left" Height="26" Margin="149,316,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="143" BorderBrush="Black" PreviewTextInput="txtPrecio_PreviewTextInput"/>
+        <TextBox x:Name="txtDescOf" Controls:TextBoxHelper.ClearTextButton="True" HorizontalAlignment="Left" Height="101" Margin="149,559,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="143" BorderBrush="Black"/>
+        <DatePicker x:Name="dpFecha" HorizontalAlignment="Left" Margin="149,430,0,0" VerticalAlignment="Top" BorderBrush="Black" Height="26" Width="143"/>
+        <Label Content="Minimo Productos" HorizontalAlignment="Left" Margin="351,259,0,0" VerticalAlignment="Top" Width="113" Height="26"/>
+        <TextBox x:Name="txtMinProd" Controls:TextBoxHelper.ClearTextButton="True" Controls:TextBoxHelper.Watermark="Cantidad minima" HorizontalAlignment="Left" Height="26" Margin="30,259,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="141" BorderBrush="Black" Grid.Column="1" PreviewTextInput="txtMinProd_PreviewTextInput"/>
         <Label Content="Máximo Productos" HorizontalAlignment="Left" Margin="351,316,0,0" VerticalAlignment="Top" Width="113" Height="26"/>
-        <TextBox x:Name="txtMaxProd" Controls:TextBoxHelper.ClearTextButton="True" Controls:TextBoxHelper.Watermark="Cantidad maxima" HorizontalAlignment="Left" Height="26" Margin="30,316,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="141" BorderBrush="Black" Grid.Column="1"/>
-        <Button x:Name="btnAdjuntar" Content="Adjuntar&#xD;&#xA;Imagen" HorizontalAlignment="Left" Margin="24,437,0,0" VerticalAlignment="Top" Width="104" Click="btnAdjuntar_Click" BorderBrush="Black" Height="41"/>
-        <Image x:Name="imgFoto" HorizontalAlignment="Left" Height="100" Margin="149,407,0,0" VerticalAlignment="Top" Width="143"/>
+        <TextBox x:Name="txtMaxProd" Controls:TextBoxHelper.ClearTextButton="True" Controls:TextBoxHelper.Watermark="Cantidad maxima" HorizontalAlignment="Left" Height="26" Margin="30,316,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="141" BorderBrush="Black" Grid.Column="1" PreviewTextInput="txtMaxProd_PreviewTextInput"/>
+        <Button x:Name="btnAdjuntar" Content="Adjuntar&#xD;&#xA;Imagen" HorizontalAlignment="Left" Margin="24,503,0,0" VerticalAlignment="Top" Width="104" Click="btnAdjuntar_Click" BorderBrush="Black" Height="41"/>
+        <Image x:Name="imgFoto" HorizontalAlignment="Left" Height="67" Margin="149,487,0,0" VerticalAlignment="Top" Width="90"/>
         <TextBox x:Name="txtBuscarProducto" Controls:TextBoxHelper.ClearTextButton="True" Controls:TextBoxHelper.Watermark="Buscar producto" Grid.Column="1" HorizontalAlignment="Left" Height="26" Margin="227,70,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="128" BorderBrush="Black"/>
-        <Label Content="Precio Anterior" HorizontalAlignment="Left" Margin="29,338,0,0" VerticalAlignment="Top" Width="99" Height="26"/>
-        <TextBox x:Name="txtPrecioAntes" HorizontalAlignment="Left" Height="26" Margin="149,338,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="143"/>
+        <Label Content="Precio Anterior" HorizontalAlignment="Left" Margin="29,374,0,0" VerticalAlignment="Top" Width="99" Height="26"/>
+        <TextBox x:Name="txtPrecioAntes" HorizontalAlignment="Left" Height="26" Margin="149,374,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="143" PreviewTextInput="txtPrecioAntes_PreviewTextInput"/>
         <CheckBox x:Name="chPubOf" Content="Publicar Oferta" HorizontalAlignment="Left" Margin="227,223,0,0" VerticalAlignment="Top" Width="122" Grid.Column="1" Height="18"/>
         <ComboBox x:Name="cbSucursal" HorizontalAlignment="Left" Margin="227,263,0,0" VerticalAlignment="Top" Width="141" Grid.Column="1" Height="22"/>
-        <Label Content="Sucursal" HorizontalAlignment="Left" Margin="351,419,0,0" VerticalAlignment="Top" Width="113" Height="26"/>
+        <Label Content="Sucursal" HorizontalAlignment="Left" Margin="351,431,0,0" VerticalAlignment="Top" Width="113" Height="26"/>
         <Label Content="Categoria Oferta" HorizontalAlignment="Left" Margin="347,374,0,0" VerticalAlignment="Top" Width="113" Height="26"/>
         <ComboBox x:Name="cbCatOf" HorizontalAlignment="Left" Margin="30,374,0,0" VerticalAlignment="Top" Width="141" Grid.Column="1" Height="22"/>
         <Button x:Name="btnVolver" Content="Volver" Grid.Column="1" HorizontalAlignment="Left" Margin="178,606,0,0" VerticalAlignment="Top" Width="74" Click="btnVolver_Click"/>
         <Button x:Name="btnSalir" Content="SALIR" Grid.Column="1" HorizontalAlignment="Left" Margin="293,606,0,0" VerticalAlignment="Top" Width="75" Click="btnSalir_Click"/>
         <Button Content="EXPORTAR PDF" Grid.Column="1" HorizontalAlignment="Left" Margin="227,170,0,0" VerticalAlignment="Top" Width="128"/>
         <Label x:Name="lblUserAct" Grid.Column="1" HorizontalAlignment="Left" Margin="227,10,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.566,-0.846" Width="165" Height="29"/>
-        <DataGrid x:Name="dgSuc" HorizontalAlignment="Left" Margin="30,419,0,0" VerticalAlignment="Top" RenderTransformOrigin="1.136,-0.68" Width="166" Grid.Column="1" Height="159" AutoGenerateColumns="False" CanUserAddRows="False" CanUserDeleteRows="False" CanUserResizeRows="False" CanUserResizeColumns="False">
+        <DataGrid x:Name="dgSuc" HorizontalAlignment="Left" Margin="30,431,0,0" VerticalAlignment="Top" RenderTransformOrigin="1.136,-0.68" Width="166" Grid.Column="1" Height="159" AutoGenerateColumns="False" CanUserAddRows="False" CanUserDeleteRows="False" CanUserResizeRows="False" CanUserResizeColumns="False">
             <DataGrid.Columns>
                 <DataGridCheckBoxColumn x:Name="Seleccionar" Header="" Binding="{Binding Selec}" />
                 <DataGridTextColumn Header="Nombre Sucursal" Binding="{Binding Nombre}" IsReadOnly="True" />
             </DataGrid.Columns>
         </DataGrid>
+        <Label x:Name="lblFechaOferta" Content="Label" HorizontalAlignment="Left" Margin="149,456,0,0" VerticalAlignment="Top" Width="270"  Foreground="#FFF10707"/>
+        <Label x:Name="lblPrecioAnterior" Content="Label" HorizontalAlignment="Left" Margin="149,399,0,0" VerticalAlignment="Top" Width="270"  Foreground="#FFF10707"/>
+        <Label x:Name="lblPrecioOferta" Content="Label" HorizontalAlignment="Left" Margin="149,343,0,0" VerticalAlignment="Top" Width="270"  Foreground="#FFF10707"/>
+        <Label x:Name="lblNombre" Content="Label" HorizontalAlignment="Left" Margin="149,285,0,0" VerticalAlignment="Top" Width="270"  Foreground="#FFF10707"/>
+        <Label x:Name="lblMinProductos" Content="Label" HorizontalAlignment="Left" Margin="30,285,0,0" VerticalAlignment="Top" Width="270"  Foreground="#FFF10707" Grid.Column="1"/>
+        <Label x:Name="lblMaxProductos" Content="Label" HorizontalAlignment="Left" Margin="30,342,0,0" VerticalAlignment="Top" Width="270"  Foreground="#FFF10707" Grid.Column="1"/>
+        <Label x:Name="lblCategoriaOferta" Content="Label" HorizontalAlignment="Left" Margin="30,399,0,0" VerticalAlignment="Top" Width="270"  Foreground="#FFF10707" Grid.Column="1"/>
+        <Label x:Name="lblImagen" Content="Label" HorizontalAlignment="Left" Margin="275,526,0,0" VerticalAlignment="Top" Width="176"  Foreground="#FFF10707"/>
+        <Label x:Name="lblNombre_Copy7" Content="*" HorizontalAlignment="Left" Margin="118,259,0,0" VerticalAlignment="Top" Width="19"  Foreground="#FFF10707"/>
+        <Label x:Name="lblNombre_Copy8" Content="*" HorizontalAlignment="Left" Margin="108,316,0,0" VerticalAlignment="Top" Width="19"  Foreground="#FFF10707"/>
+        <Label x:Name="lblNombre_Copy9" Content="*" HorizontalAlignment="Left" Margin="118,374,0,0" VerticalAlignment="Top" Width="19"  Foreground="#FFF10707"/>
+        <Label x:Name="lblNombre_Copy10" Content="*" HorizontalAlignment="Left" Margin="109,430,0,0" VerticalAlignment="Top" Width="19"  Foreground="#FFF10707"/>
+        <Label x:Name="lblNombre_Copy11" Content="*" HorizontalAlignment="Left" Margin="130,508,0,0" VerticalAlignment="Top" Width="19"  Foreground="#FFF10707"/>
+        <Label x:Name="lblNombre_Copy12" Content="*" HorizontalAlignment="Left" Margin="451,259,0,0" VerticalAlignment="Top" Width="19"  Foreground="#FFF10707"/>
+        <Label x:Name="lblNombre_Copy13" Content="*" HorizontalAlignment="Left" Margin="451,316,0,0" VerticalAlignment="Top" Width="19"  Foreground="#FFF10707"/>
+        <Label x:Name="lblNombre_Copy14" Content="*" HorizontalAlignment="Left" Margin="441,374,0,0" VerticalAlignment="Top" Width="19"  Foreground="#FFF10707"/>
+        <Label x:Name="lblNombre_Copy15" Content="*" HorizontalAlignment="Left" Margin="400,431,0,0" VerticalAlignment="Top" Width="19"  Foreground="#FFF10707"/>
+        <Label x:Name="lblSucursal" Content="Label" HorizontalAlignment="Left" Margin="201,485,0,0" VerticalAlignment="Top" Width="176"  Foreground="#FFF10707" Grid.Column="1"/>
     </Grid>
 </Controls:MetroWindow>
