--- a/Core.DALC/ReportingService/Reporte de Valoraciones .rdl
+++ b/Core.DALC/ReportingService/Reporte de Valoraciones .rdl
@@ -63,9 +63,10 @@ WHERE        SUCURSALES.ID_SUCURSAL = OFERTA.SUCURSALES_ID AND OFERTA.ID_OFERTA 
       <Filters>
         <Filter>
           <FilterExpression>=Fields!FECHA_VALORACION.Value</FilterExpression>
-          <Operator>GreaterThanOrEqual</Operator>
+          <Operator>Between</Operator>
           <FilterValues>
             <FilterValue>=Parameters!fechValo.Value</FilterValue>
+            <FilterValue>=Parameters!fechHasta.Value</FilterValue>
           </FilterValues>
         </Filter>
       </Filters>
@@ -86,6 +87,9 @@ WHERE        SUCURSALES.ID_SUCURSAL = OFERTA.SUCURSALES_ID AND OFERTA.ID_OFERTA 
                 </TablixColumn>
                 <TablixColumn>
                   <Width>2.0993cm</Width>
+                </TablixColumn>
+                <TablixColumn>
+                  <Width>2.5cm</Width>
                 </TablixColumn>
               </TablixColumns>
               <TablixRows>
@@ -169,6 +173,36 @@ WHERE        SUCURSALES.ID_SUCURSAL = OFERTA.SUCURSALES_ID AND OFERTA.ID_OFERTA 
                             </Paragraph>
                           </Paragraphs>
                           <rd:DefaultName>Textbox47</rd:DefaultName>
+                          <Style>
+                            <Border>
+                              <Color>LightGrey</Color>
+                              <Style>Solid</Style>
+                            </Border>
+                            <PaddingLeft>2pt</PaddingLeft>
+                            <PaddingRight>2pt</PaddingRight>
+                            <PaddingTop>2pt</PaddingTop>
+                            <PaddingBottom>2pt</PaddingBottom>
+                          </Style>
+                        </Textbox>
+                      </CellContents>
+                    </TablixCell>
+                    <TablixCell>
+                      <CellContents>
+                        <Textbox Name="Textbox1">
+                          <CanGrow>true</CanGrow>
+                          <KeepTogether>true</KeepTogether>
+                          <Paragraphs>
+                            <Paragraph>
+                              <TextRuns>
+                                <TextRun>
+                                  <Value>FECHA VALORACION</Value>
+                                  <Style />
+                                </TextRun>
+                              </TextRuns>
+                              <Style />
+                            </Paragraph>
+                          </Paragraphs>
+                          <rd:DefaultName>Textbox1</rd:DefaultName>
                           <Style>
                             <Border>
                               <Color>LightGrey</Color>
@@ -277,12 +311,43 @@ WHERE        SUCURSALES.ID_SUCURSAL = OFERTA.SUCURSALES_ID AND OFERTA.ID_OFERTA 
                         </Textbox>
                       </CellContents>
                     </TablixCell>
+                    <TablixCell>
+                      <CellContents>
+                        <Textbox Name="FECHA_VALORACION">
+                          <CanGrow>true</CanGrow>
+                          <KeepTogether>true</KeepTogether>
+                          <Paragraphs>
+                            <Paragraph>
+                              <TextRuns>
+                                <TextRun>
+                                  <Value>=Fields!FECHA_VALORACION.Value</Value>
+                                  <Style />
+                                </TextRun>
+                              </TextRuns>
+                              <Style />
+                            </Paragraph>
+                          </Paragraphs>
+                          <rd:DefaultName>FECHA_VALORACION</rd:DefaultName>
+                          <Style>
+                            <Border>
+                              <Color>LightGrey</Color>
+                              <Style>Solid</Style>
+                            </Border>
+                            <PaddingLeft>2pt</PaddingLeft>
+                            <PaddingRight>2pt</PaddingRight>
+                            <PaddingTop>2pt</PaddingTop>
+                            <PaddingBottom>2pt</PaddingBottom>
+                          </Style>
+                        </Textbox>
+                      </CellContents>
+                    </TablixCell>
                   </TablixCells>
                 </TablixRow>
               </TablixRows>
             </TablixBody>
             <TablixColumnHierarchy>
               <TablixMembers>
+                <TablixMember />
                 <TablixMember />
                 <TablixMember />
                 <TablixMember />
@@ -300,9 +365,8 @@ WHERE        SUCURSALES.ID_SUCURSAL = OFERTA.SUCURSALES_ID AND OFERTA.ID_OFERTA 
             </TablixRowHierarchy>
             <DataSetName>Valoraciones</DataSetName>
             <Top>2.75167cm</Top>
-            <Left>0.39688cm</Left>
             <Height>2.73967cm</Height>
-            <Width>9.13855cm</Width>
+            <Width>11.63855cm</Width>
             <Style>
               <Border>
                 <Style>None</Style>
@@ -655,9 +719,9 @@ WHERE        SUCURSALES.ID_SUCURSAL = OFERTA.SUCURSALES_ID AND OFERTA.ID_OFERTA 
             </ChartNoDataMessage>
             <DataSetName>Valoraciones</DataSetName>
             <Top>2.16958cm</Top>
-            <Left>14.63129cm</Left>
+            <Left>12.06483cm</Left>
             <Height>5cm</Height>
-            <Width>7.5cm</Width>
+            <Width>6.81208cm</Width>
             <ZIndex>1</ZIndex>
             <Style>
               <Border>
@@ -691,6 +755,11 @@ WHERE        SUCURSALES.ID_SUCURSAL = OFERTA.SUCURSALES_ID AND OFERTA.ID_OFERTA 
       <Nullable>true</Nullable>
       <Prompt>Buscar desde fecha</Prompt>
     </ReportParameter>
+    <ReportParameter Name="fechHasta">
+      <DataType>DateTime</DataType>
+      <Nullable>true</Nullable>
+      <Prompt>Buscar hasta fecha</Prompt>
+    </ReportParameter>
   </ReportParameters>
   <ReportParametersLayout>
     <GridLayoutDefinition>
@@ -701,6 +770,11 @@ WHERE        SUCURSALES.ID_SUCURSAL = OFERTA.SUCURSALES_ID AND OFERTA.ID_OFERTA 
           <ColumnIndex>0</ColumnIndex>
           <RowIndex>0</RowIndex>
           <ParameterName>fechValo</ParameterName>
+        </CellDefinition>
+        <CellDefinition>
+          <ColumnIndex>0</ColumnIndex>
+          <RowIndex>1</RowIndex>
+          <ParameterName>fechHasta</ParameterName>
         </CellDefinition>
       </CellDefinitions>
     </GridLayoutDefinition>
